cmake_minimum_required(VERSION 3.25)
project(cowboy_vs_ninja_a)

set(CMAKE_CXX_STANDARD 23)

add_executable(cowboy_vs_ninja_a sources/Team.cpp sources/Team.hpp sources/Point.cpp sources/Point.hpp sources/Cowboy.cpp sources/Cowboy.hpp sources/OldNinja.cpp sources/OldNinja.hpp Demo.cpp TestCounter.cpp sources/Character.cpp sources/Character.hpp StudentTest1.cpp sources/YoungNinja.cpp sources/YoungNinja.hpp sources/TrainedNinja.cpp sources/TrainedNinja.hpp sources/Team2.cpp sources/Team2.hpp sources/Ninja.cpp sources/Ninja.hpp Test.cpp sources/SmartTeam.cpp sources/SmartTeam.hpp)
